--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
-remote_theme: pages-themes/slate@v0.2.0
+# remote_theme: pages-themes/slate@v0.2.0
+remote_theme: daviddarnes/alembic@main
 plugins:
 - jekyll-remote-theme
 
