--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
-theme: jekyll-theme-merlot
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
-- jekyll-remote-theme
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Sports Activity Recognizer
 description: An image crecognition API that recognizes 15 different types of sports.
