--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
-remote_theme: pages-themes/slate@v0.2.0
+remote_theme: rcvalle/jekyll-theme-template@main
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-theme
 
 title: Sports Activity Recognizer
 description: An image crecognition API that recognizes 15 different types of sports.
